# epr-copilot-complete

./: BACKLOG.md  CHANGELOG.md  GO_LIVE_READINESS_REPORT.md  RELEASE_NOTES_PHASE3.md  TEST-003-VERIFICATION.md  docker-compose.yml  test_deployment.sh
.github/workflows/: lighthouse.yml  performance.yml  security.yml
backend/: .env.example
epr-copilot-complete/: .gitignore  .trivyignore  QA_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml
epr-copilot-complete/backend/: Dockerfile  README.md  pytest.ini
epr-copilot-complete/backend/epr_backend/: .env  Makefile  alembic.ini  analyze_database.py  audit.db  epr_copilot.db  fix_database.py  pyproject.toml  ruff.toml  run_v2_migration.py  test_startup.py  test_v2_integration.py  update_analytics_schema.py
epr-copilot-complete/backend/epr_backend/alembic/: env.py
epr-copilot-complete/backend/epr_backend/alembic/versions/: 002_add_notifications_and_compliance_models.py  003_add_missing_indexes_and_fix_material_model.py  004_add_performance_indexes.py  12cb67911458_add_category_column_to_products.py  7bd6a9a06eb1_add_multi_jurisdictional_epr_models.py  add_analytics_fields.py  upgrade_to_epr_v2_schema.py
epr-copilot-complete/backend/epr_backend/app/: auth.py  auth_utils.py  cache.py  calculation_engine.py  config.py  database.py  exceptions.py  init_db.py  main.py  migrate_to_v2.py  populate_jurisdictions.py  schemas.py  validation_schemas.py
epr-copilot-complete/backend/epr_backend/app/calculation_strategies/: __init__.py  base_strategy.py  california_strategy.py  colorado_strategy.py  maine_strategy.py  oregon_strategy.py  shared_responsibility_strategy.py
epr-copilot-complete/backend/epr_backend/app/core/: config.py  exceptions.py  simulation.py
epr-copilot-complete/backend/epr_backend/app/routers/: admin.py  analytics.py  auth.py  background_jobs.py  bulk.py  calendar.py  company.py  compliance.py  epr_rates.py  exports.py  fees.py  files.py  materials.py  messages.py  notifications.py  payments.py  products.py  reports.py  saved_searches.py  security.py  settings.py  team.py  user.py
epr-copilot-complete/backend/epr_backend/app/security/: __init__.py  audit_logging.py  encryption.py  rate_limiting.py  security_headers.py
epr-copilot-complete/backend/epr_backend/app/services/: analytics_service.py  background_jobs.py  email_service.py  push_notification_service.py  scheduler.py  sms_service.py
epr-copilot-complete/backend/epr_backend/app/utils/: cache.py  field_converter.py
epr-copilot-complete/backend/epr_backend/tests/: conftest.py  test_authentication.py  test_compliance_calculations.py  test_health.py  test_jurisdiction_calculations.py  test_multi_tenant_isolation.py
epr-copilot-complete/frontend/: .env  .npmrc  Dockerfile  README.md  index.html  lighthouserc.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
epr-copilot-complete/performance/: k6-load-test.js
epr-copilot-complete/scripts/: security-scan.sh
frontend/: .env
performance/: k6-load-test.js
(+278 files in other folders)
