[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
boto3 = "^1.38.46"
stripe = "^12.2.0"
sendgrid = "^6.12.4"
python-dotenv = "^1.1.1"
twilio = "^9.6.3"
firebase-admin = "^6.9.0"
jinja2 = "^3.1.6"
celery = "^5.5.3"
redis = "^6.2.0"
python-crontab = "^3.2.0"
apscheduler = "^3.11.0"
slowapi = "^0.1.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
