[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
jinja2 = "^3.1.6"
slowapi = "^0.1.9"
ecdsa = "^0.19.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.poetry.group.cloud-services]
optional = true

[tool.poetry.group.cloud-services.dependencies]
boto3 = "^1.38.46"

[tool.poetry.group.payment-services]
optional = true

[tool.poetry.group.payment-services.dependencies]
stripe = "^12.2.0"

[tool.poetry.group.email-services]
optional = true

[tool.poetry.group.email-services.dependencies]
sendgrid = "^6.12.4"

[tool.poetry.group.sms-services]
optional = true

[tool.poetry.group.sms-services.dependencies]
twilio = "^9.6.3"

[tool.poetry.group.push-services]
optional = true

[tool.poetry.group.push-services.dependencies]
firebase-admin = "^6.9.0"

[tool.poetry.group.scheduler-services]
optional = true

[tool.poetry.group.scheduler-services.dependencies]
celery = "^5.5.3"
redis = "^6.2.0"
python-crontab = "^3.2.0"
apscheduler = "^3.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
